5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1577_1331.log
== SUBMITION (2019-03-14 19:27:43) 
-- CODE:
print(/50/3/)
print(50%3)
-- EXECUTION TIME:
0.139931
-- ERROR:
  File "/home/codebench/codes/1577/1331/main.py", line 1
    print(/50/3/)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:27:46) 
-- CODE:
print(/50/3/)
print(50%3)
-- ERROR:
File "XXXX", line 1
    print(/50/3/)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:28:10) 
-- CODE:
print(50//3/)
print(50%3)
-- EXECUTION TIME:
0.16952
-- ERROR:
  File "/home/codebench/codes/1577/1331/main.py", line 1
    print(50//3/)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:28:46) 
-- CODE:
print(50//3)
print(50%3)
-- EXECUTION TIME:
0.154471
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
